# pygame-langtons-ant

./: .gitignore  README.md  genreq.sh  main.py  pyproject.toml  reqgen.sh  requirements.txt
